2000-09-21  Andy Hertzfeld  <andy@eazel.com>

	* data/mime/gnome-vfs.keys:
	tweaked the mime-types to use Susan's new icons for music and
	spreadsheet files.
	
2000-09-21  Mathieu Lacage  <mathieu@eazel.com>

	* libgnomevfs/gnome-vfs-private-utils.c:
	(gnome_vfs_canonicalize_pathname): make it not transform
	'method://foo' to 'method://foo.'
	* libgnomevfs/gnome-vfs-uri.c: (split_toplevel_uri):
	make it differentiate 'method://foo/' from 'method://foo'
	* modules/ftp-method.c: (do_path_command),
	(do_path_transfer_command), (ftp_connection_create),
	(ls_to_file_info), (do_open_directory):
	fix to handle the fact the gnome_vfs_uri_get_path can
	return a string of length zero.
	* modules/http-method.c: (make_request): handle the same 
	special case as above.
	* test/test-uri.c: (main): add tests to test my new stuff.

2000-09-21  Darin Adler  <darin@eazel.com>

	Fixed code that was creating a separate "job slave" object that
	was never really used. Fixes a storage leak.
	
	* libgnomevfs-pthread/gnome-vfs-job-slave.h:
	* libgnomevfs-pthread/gnome-vfs-job-slave.c: (thread_routine):
	Changed to take a GnomeVFSJob pointer instead of GnomeVFSJobSlave.
	(gnome_vfs_job_create_slave): Replaced the old
	gnome_vfs_job_slave_new with this simpler function.
	Also removed a lot of unused functions.
	* libgnomevfs-pthread/gnome-vfs-job.h:
	* libgnomevfs-pthread/gnome-vfs-job.c: (gnome_vfs_job_new):
	Use the new gnome_vfs_job_create_slave instead of
	gnome_vfs_job_slave_new and don't even try to keep a slave pointer
	around.

2000-09-21  Rebecca Schulman  <rebecka@eazel.com>

	* libgnomevfs/gnome-vfs-directory-filter.c: (common_filter):
	* libgnomevfs/gnome-vfs-types.h:
	Added the filter type no dot files

2000-09-21  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_file_data):
	Properly handle GNOME_VFS_ERROR_EOF.
	Fixes bugzilla 3225.

2000-09-21  Mike Fleming  <mfleming@eazel.com>

	* gnome-vfs.spec.in: