@@ -1,3 +1,9 @@
+2000-09-22  Ian McKellar  <yakk@yakk.net.au>
+
+	* modules/http-method.c: (make_propfind_request):
+	Fixed bug 2655: Only request the WebDAV properties we're interested
+	in.
+
 2000-09-21  Andy Hertzfeld  <andy@eazel.com>
 
 	* data/mime/gnome-vfs.keys:
